--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
       <h2>Artikel</h2>
       <h5>Membangun Generasi Digital dengan Keterampilan Informatika</h5>
       <p>Informatika bukan hanya tentang kode, tapi memahami peran teknologi dalam kehidupan. Saya membimbing siswa untuk berpikir kreatif dan membangun proyek nyata yang relevan.</p>
-     <a href="artikel.html">Baca selengkapnya...</a>
-
+     <a href="#">Baca selengkapnya...</a>
     </div>
   </div>
 
